Fixed social icons layout issue on samsung s3 default browser

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3732,6 +3732,7 @@ pre {
   }
 }
 .layout-header {
+  width: 100%;
   *zoom: 1;
 }
 .layout-header:before,
@@ -5670,7 +5671,6 @@ select option {
   line-height: 1;
   display: table;
   float: right;
-  margin: 0 auto;
 }
 .social:before,
 .social:after {
