--- a/assets/less/components/social.less
+++ b/assets/less/components/social.less
@@ -5,7 +5,6 @@
 
 	display: table;
 	float: right;
-	margin: 0 auto;
 
 	li {
 
