--- a/assets/less/layout/layout-header.less
+++ b/assets/less/layout/layout-header.less
@@ -1,6 +1,7 @@
 
 .layout-header {
 
+	width: 100%;
 	.clearfix;
 
 	#logo {
